[tool.poetry]
name = "inventory-intelligence"
version = "0.1.0"
description = "Inventory price analysis tool for Pollin take-home project"
authors = ["Your Name <your.email@example.com>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.10"
pandas = "^2.0.0"
requests = "^2.28.0"
fuzzywuzzy = "^0.18.0"
rapidfuzz = "^3.0.0"
cryptography = "^46.0.1"

[tool.poetry.group.dev.dependencies]
pytest = "^7.0.0"
black = "^22.0.0"
flake8 = "^5.0.0"
grip = "^4.6.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
analyze = "inventory_analyzer:main"